--- a/_teaching/2017-fall-cos324.md
+++ b/_teaching/2017-fall-cos324.md
@@ -8,4 +8,4 @@ date: 2017-09-01
 location: "City, Country"
 ---
 
-I worked as a grader for [COS324: Introduction to Machine Learning](https://www.cs.princeton.edu/courses/archive/fall17/cos324/).
+Grader for [COS324: Introduction to Machine Learning](https://www.cs.princeton.edu/courses/archive/fall17/cos324/).
